grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) => seq($.statement, $._semicolon),

    _semicolon: ($) => choice(';', $._automatic_semicolon),

    line_comment: ($) => token(seq('//', /[^\n]*/)),

    _one_or_more_statements: ($) =>
      seq(repeat($._statement), $.statement, optional($._semicolon)),

    _switch_body: ($) => seq(repeat($._statement), $.statement),

    block: ($) =>
      prec.right(seq('{', optional($._one_or_more_statements), '}')),

    open_statement: ($) => seq('open', optional('!'), $.module_expression),

    module_binding: ($) =>
      prec.left(
        seq(
          field('name', choice($.module_identifier, $.type_identifier)),
          optional(
            seq(
              ':',
              field(
                'signature',
                choice($.block, $.module_expression, $.functor),
              ),
            ),
          ),
          optional(
            seq(
              '=',
              optional('await'),
              field('definition', $._module_definition),
            ),
          ),
        ),
      ),

    module_declaration: ($) =>
      seq(
        'module',
        optional('rec'),
        optional('type'),
        sep1('and', $.module_binding),
      ),

    _module_definition: ($) =>
      choice($.block, $.module_expression, $.functor, $.extension_expression),

    type_annotation: ($) => seq(':', $._inline_type),

    _type: ($) =>
      choice($._inline_type, $.variant_type, $.record_type, $.as_aliasing_type),

    _inline_type: ($) => choice($._non_function_inline_type, $.function_type),

    generic_type: ($) => prec.left(seq($._type_identifier, $.type_arguments)),

    type_arguments: ($) => seq('<', commaSep1t($._type), '>'),

    let_declaration: ($) =>
      seq(choice('export', 'let'), optional('rec'), sep1('and', $.let_binding)),

    let_binding: ($) =>
      seq(
        field('pattern', $._pattern),
        choice(
          seq(
            $.type_annotation,
            optional(seq('=', field('body', $.expression))),
          ),
          seq('=', field('body', $.expression)),
        ),
      ),

    expression_statement: ($) => $.expression,

    parenthesized_expression: ($) =>
      seq('(', $.expression, optional($.type_annotation), ')'),

    value_identifier_path: ($) =>
      seq($.module_primary_expression, '.', $.value_identifier),

    function: ($) =>
      prec.left(
        seq(
          optional('async'),
          choice(
            field('parameter', $.value_identifier),
            $._definition_signature,
          ),
          '=>',
          field('body', $.expression),
        ),
      ),

    record: ($) =>
      seq(
        '{',
        choice(
          $._record_single_field,
          $._record_single_pun_field,
          commaSep2t($._record_element),
        ),
        '}',
      ),

    _record_element: ($) =>
      choice(
        $.spread_element,
        $.record_field,
        alias($._record_pun_field, $.record_field),
      ),

    record_field: ($) =>
      seq($._record_field_name, ':', optional('?'), $.expression),

    _record_single_field: ($) => seq($.record_field, optional(',')),

    _record_single_pun_field: ($) =>
      seq('?', $._record_field_name, optional(',')),

    _record_field_name: ($) =>
      choice(
        alias($.value_identifier, $.property_identifier),
        alias($.value_identifier_path, $.property_identifier),
      ),

    object: ($) =>
      seq(
        '{',
        choice(
          commaSep1t($._object_field),
          seq('.', commaSept($._object_field)),
          seq('..', commaSept($._object_field)),
        ),
        '}',
      ),

    _object_field: ($) => alias($.object_field, $.field),

    tuple: ($) => seq('(', commaSep2t($.expression), ')'),

    array: ($) =>
      seq('[', commaSept(choice($.spread_element, $.expression)), ']'),

    list: ($) =>
      seq($._list_constructor, '{', optional(commaSep1t($._list_element)), '}'),

    _list_element: ($) => choice($.expression, $.spread_element),

    dict: ($) =>
      seq(
        alias($._dict_constructor, 'dict'),
        '{',
        commaSept($.dict_entry),
        '}',
      ),

    dict_entry: ($) => seq($.string, ':', $.expression),

    if_expression: ($) =>
      seq(
        'if',
        $.expression,
        $.block,
        repeat($.else_if_clause),
        optional($.else_clause),
      ),

    else_if_clause: ($) => seq('else', 'if', $.expression, $.block),

    else_clause: ($) => seq('else', $.block),

    switch_expression: ($) =>
      seq(
        'switch',
        $.expression,
        '{',
        repeat(seq($.switch_match, optional($._semicolon))),
        '}',
      ),

    switch_match: ($) =>
      prec.dynamic(
        -1,
        seq(
          '|',
          field('pattern', choice($.variant_spread_pattern, $._pattern)),
          optional($.guard),
          '=>',
          field('body', alias($._switch_body, $.sequence_expression)),
        ),
      ),

    guard: ($) => seq(choice('if', 'when'), $.expression),

    polyvar_type_pattern: ($) => seq('#', '...', $._type_identifier),

    variant_type_pattern: ($) => seq('...', $._type_identifier),

    variant_spread_pattern: ($) =>
      seq($.variant_type_pattern, optional($.as_aliasing)),

    try_expression: ($) =>
      seq(
        'try',
        $.expression,
        'catch',
        '{',
        repeat(seq($.switch_match, optional($._semicolon))),
        '}',
      ),

    as_aliasing: ($) =>
      prec.left(seq('as', $._pattern, optional($.type_annotation))),

    assert_expression: ($) => prec.left(seq('assert', $.expression)),

    call_expression: ($) =>
      prec(
        'call',
        seq(
          field('function', $.primary_expression),
          field('arguments', alias($.call_arguments, $.arguments)),
        ),
      ),

    pipe_expression: ($) =>
      prec.left(
        seq(
          choice($.primary_expression, $.block),
          choice('->', '|>'),
          choice($.primary_expression, $.block),
        ),
      ),

    partial_application_spread: ($) => '...',

    labeled_argument: ($) =>
      seq(
        '~',
        field('label', $.value_identifier),
        optional(
          choice(
            '?',
            seq(
              '=',
              optional('?'),
              field('value', $.expression),
              optional(field('type', $.type_annotation)),
            ),
          ),
        ),
      ),

    _definition_signature: ($) =>
      seq(
        field('parameters', $.formal_parameters),
        optional(
          field(
            'return_type',
            alias($._return_type_annotation, $.type_annotation),
          ),
        ),
      ),

    formal_parameters: ($) =>
      seq('(', optional(choice(commaSep1t($.parameter), $.uncurry)), ')'),

    parameter: ($) =>
      seq(
        optional($.uncurry),
        choice(
          seq($._pattern, optional($.type_annotation)),
          $.labeled_parameter,
          $.unit,
          $.abstract_type,
        ),
      ),

    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            seq(optional('?'), $.value_identifier),
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    parenthesized_pattern: ($) =>
      seq('(', $._pattern, optional($.type_annotation), ')'),

    range_pattern: ($) => seq($._literal_pattern, '..', $._literal_pattern),

    or_pattern: ($) => prec.left(seq($._pattern, '|', $._pattern)),

    exception_pattern: ($) => seq('exception', $._pattern),

    _literal_pattern: ($) =>
      choice(
        $.string,
        $.template_string,
        $.character,
        $.number,
        $.true,
        $.false,
        $.regex,
      ),

    variant_pattern: ($) =>
      seq(
        optional('?'),
        choice($.variant_identifier, $.nested_variant_identifier),
        optional(alias($._variant_pattern_parameters, $.formal_parameters)),
      ),

    _variant_pattern_parameters: ($) =>
      seq('(', commaSept($._variant_pattern_parameter), ')'),

    polyvar_pattern: ($) =>
      seq(
        $.polyvar_identifier,
        optional(alias($._variant_pattern_parameters, $.formal_parameters)),
      ),

    record_pattern: ($) =>
      seq(
        '{',
        commaSep1t(
          seq(
            optional('?'),
            choice($.value_identifier, $.value_identifier_path),
            optional(seq(':', $._pattern)),
          ),
        ),
        '}',
      ),

    tuple_item_pattern: ($) => seq($._pattern, optional($.type_annotation)),

    tuple_pattern: ($) => seq('(', commaSep2t($.tuple_item_pattern), ')'),

    array_pattern: ($) =>
      seq('[', optional(commaSep1t($._collection_element_pattern)), ']'),

    list_pattern: ($) =>
      seq(
        $._list_constructor,
        '{',
        optional(commaSep1t($._collection_element_pattern)),
        '}',
      ),

    dict_pattern: ($) =>
      seq(
        alias($._dict_constructor, 'dict'),
        '{',
        commaSept($.dict_pattern_entry),
        '}',
      ),

    dict_pattern_entry: ($) => seq($.string, ':', $._pattern),

    _collection_element_pattern: ($) =>
      seq(choice($._pattern, $.spread_pattern), optional($.as_aliasing)),

    spread_pattern: ($) =>
      seq('...', choice($.value_identifier, $.list_pattern, $.array_pattern)),

    lazy_pattern: ($) => seq('lazy', $._pattern),

    mutation_expression: ($) =>
      seq($._mutation_lvalue, choice('=', ':='), $.expression),

    _mutation_lvalue: ($) =>
      choice($.value_identifier, $.member_expression, $.subscript_expression),

    await_expression: ($) => seq('await', $.expression),

    subscript_expression: ($) =>
      prec.right(
        'member',
        seq(
          field('object', $.primary_expression),
          '[',
          field('index', $.expression),
          ']',
        ),
      ),

    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('record', $.primary_expression),
          '.',
          optional(
            seq(
              field(
                'module',
                seq(repeat(seq($.module_identifier, '.')), $.module_identifier),
              ),
              '.',
            ),
          ),
          field('property', alias($.value_identifier, $.property_identifier)),
        ),
      ),

    spread_element: ($) => seq('...', $.expression),

    ternary_expression: ($) =>
      prec.left(
        seq(
          field('condition', $.expression),
          '?',
          field('consequence', $.expression),
          ':',
          field('alternative', $.expression),
        ),
      ),

    for_expression: ($) =>
      seq(
        'for',
        $.value_identifier,
        'in',
        $.expression,
        choice('to', 'downto'),
        $.expression,
        $.block,
      ),

    while_expression: ($) => seq('while', $.expression, $.block),

    lazy_expression: ($) => seq('lazy', $.expression),

    binary_expression: ($) =>
      choice(
        ...[
          ['&&&', 'binary_bitand'],
          ['&&', 'binary_and'],
          ['|||', 'binary_bitor'],
          ['||', 'binary_or'],
          ['^^^', 'binary_bitxor'],
          ['++', 'binary_plus'],
          ['+', 'binary_plus'],
          ['+.', 'binary_plus'],
          ['-', 'binary_plus'],
          ['-.', 'binary_plus'],
          ['*', 'binary_times'],
          ['*.', 'binary_times'],
          ['%', 'binary_times'],
          ['**', 'binary_pow', 'right'],
          ['/', 'binary_times'],
          ['/.', 'binary_times'],
          ['<<', 'binary_shift'],
          ['>>>', 'binary_shift'],
          ['>>', 'binary_shift'],
          ['<', 'binary_relation'],
          ['<=', 'binary_relation'],
          ['==', 'binary_relation'],
          ['===', 'binary_relation'],
          ['!=', 'binary_relation'],
          ['!==', 'binary_relation'],
          ['>=', 'binary_relation'],
          ['>', 'binary_relation'],
        ].map(([operator, precedence, associativity]) =>
          (associativity === 'right' ? prec.right : prec.left)(
            precedence,
            seq(
              field('left', $.expression),
              field('operator', operator),
              field('right', $.expression),
            ),
          ),
        ),
      ),

    coercion_expression: ($) =>
      prec.left(
        'coercion_relation',
        choice(
          seq(
            field('left', $.expression),
            field('operator', ':>'),
            field('right', $._type),
          ),
          seq(
            '(',
            field('left', $.expression),
            field('source_type', $.type_annotation),
            field('operator', ':>'),
            field('right', $._type),
            ')',
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ['~~~', 'unary_not'],
          ['!', 'unary_not'],
          ['-', 'unary_not'],
          ['-.', 'unary_not'],
          ['+', 'unary_not'],
          ['+.', 'unary_not'],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(field('operator', operator), field('argument', $.expression)),
          ),
        ),
      ),

    extension_expression: ($) =>
      prec.right(
        seq(
          repeat1('%'),
          $.extension_identifier,
          optional($._extension_expression_payload),
        ),
      ),

    _extension_expression_payload: ($) =>
      seq('(', choice($._one_or_more_statements, $.type_annotation), ')'),

    variant: ($) =>
      prec.right(
        seq(
          choice($.variant_identifier, $.nested_variant_identifier),
          optional(alias($.variant_arguments, $.arguments)),
        ),
      ),

    nested_variant_identifier: ($) =>
      seq($.module_primary_expression, '.', $.variant_identifier),

    polyvar: ($) =>
      prec.right(
        seq(
          $.polyvar_identifier,
          optional(alias($.variant_arguments, $.arguments)),
        ),
      ),

    _type_identifier: ($) => choice($.type_identifier, $.type_identifier_path),

    type_identifier_path: ($) =>
      seq($.module_primary_expression, '.', $.type_identifier),

    module_identifier_path: ($) =>
      path($.module_primary_expression, $.module_identifier),

    variant_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    polyvar_identifier: ($) =>
      seq(
        '#',
        choice(
          /[a-zA-Z0-9_']+/,
          seq(optional('\\'), alias($.string, $.polyvar_string)),
        ),
      ),

    type_identifier: ($) =>
      choice($._identifier, /'[a-zA-Z0-9_']*/, $._escape_identifier),

    _identifier: (_) => /[a-z_][a-zA-Z0-9_']*/,

    value_identifier: ($) =>
      choice($._identifier, $._reserved_identifier, $._escape_identifier),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    module_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    extension_identifier: ($) => /[a-zA-Z0-9_\.]+/,

    unit: ($) => seq('(', ')'),
    true: ($) => 'true',
    false: ($) => 'false',

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias($.unescaped_double_string_fragment, $.string_fragment),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    template_string: ($) => seq('`', optional($.template_string_content), '`'),

    uncurry: ($) => '.',
